# GateServer

./: CMakeLists.txt  README.md  Singleton.hpp  main.cpp  mysqlDao.cpp  mysqlDao.hpp  mysqlMgr.cpp  mysqlMgr.hpp  redisMgr.cpp  redisMgr.hpp
include/hv/: hconfig.h
include/mysql/: my_config_x86_64.h  mysql_version.h
